force-app/main/default/objects/Service__c/fields/ItemsNotReady__c.field-meta.xml
<CustomField>
    <fullName>ItemsNotReady__c</fullName>
    <label>Items Not Ready to Trip</label>
    <summaryFilterItems>
        <field>ServiceItem__c.Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ServiceItem__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Loaded, Item Rejected, Not Loaded, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>