force-app/main/default/objects/Service__c/fields/ItemTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>ItemTaxableAmount__c</fullName>
    <label>Item Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>