force-app/main/default/objects/Service__c/fields/JSButtonId__c.field-meta.xml
<CustomField>
    <fullName>JSButtonId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JSButtonId</label>
    <type>Text</type>
</CustomField>