force-app/main/default/objects/Service__c/fields/LastCollectionContactDate__c.field-meta.xml
<CustomField>
    <fullName>LastCollectionContactDate__c</fullName>
    <description>Date of last collection contact attempt (email or call)</description>
    <label>Last Collection Contact Date</label>
    <type>Date</type>
</CustomField>