force-app/main/default/objects/Service__c/fields/LoadedDeclinedItems__c.field-meta.xml
<CustomField>
    <fullName>LoadedDeclinedItems__c</fullName>
    <label>Loaded/Declined Items</label>
    <summaryFilterItems>
        <field>ServiceItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Declined, Loaded</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>