force-app/main/default/objects/Service__c/fields/LogCallAttempts__c.field-meta.xml
<CustomField>
    <fullName>LogCallAttempts__c</fullName>
    <label>Log a Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>