force-app/main/default/objects/Service__c/fields/NotLoadedItems__c.field-meta.xml
<CustomField>
    <fullName>NotLoadedItems__c</fullName>
    <label>Not Loaded Items</label>
    <summaryFilterItems>
        <field>ServiceItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Loaded</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>