force-app/main/default/objects/Service__c/fields/NumberOfScheduledAppointments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfScheduledAppointments__c</fullName>
    <label>Number Of Scheduled Appointments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>