force-app/main/default/objects/Service__c/fields/OnHold__c.field-meta.xml
<CustomField>
    <fullName>OnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>