force-app/main/default/objects/Service__c/fields/Other_Pay__c.field-meta.xml
<CustomField>
    <fullName>Other_Pay__c</fullName>
    <label>Other Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>