force-app/main/default/objects/Service__c/fields/Other_Pickup_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Other_Pickup_Instructions__c</fullName>
    <label>Other Pickup Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>