force-app/main/default/objects/Service__c/fields/OutgoingSMSAttempts__c.field-meta.xml
<CustomField>
    <fullName>OutgoingSMSAttempts__c</fullName>
    <label>Outgoing SMS Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>