force-app/main/default/objects/Service__c/fields/OverrideFeeCalculation__c.field-meta.xml
<CustomField>
    <fullName>OverrideFeeCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Fee Calculation</label>
    <type>Checkbox</type>
</CustomField>