force-app/main/default/objects/Service__c/fields/Payee_Total__c.field-meta.xml
<CustomField>
    <fullName>Payee_Total__c</fullName>
    <formula>Agency_Pay__c +  Other_Pay__c +  Client_Pay__c</formula>
    <label>Payee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>