force-app/main/default/objects/Service__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <description>The date by which payment is expected. Used for pre-due reminders and aging calculations.</description>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>