force-app/main/default/objects/Service__c/fields/Pending_Duplicate_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Duplicate_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this Service has been flagged as a potential duplicate (same address as another recent Service) and requires review by the Client Service Manager before proceeding.</description>
    <inlineHelpText>This request is flagged as a potential duplicate and cannot be scheduled until reviewed and cleared by the Client Service Manager.</inlineHelpText>
    <label>Pending Duplicate Review</label>
    <type>Checkbox</type>
</CustomField>