force-app/main/default/objects/Service__c/fields/Pickup_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_1__c</fullName>
    <label>Pickup Date 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>