force-app/main/default/objects/Service__c/fields/Pickup_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_3__c</fullName>
    <label>Pickup Date 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>