force-app/main/default/objects/Service__c/fields/Pickup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Fee__c</fullName>
    <label>Pickup Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>