force-app/main/default/objects/Service__c/fields/Pickup_type__c.field-meta.xml
<CustomField>
    <fullName>Pickup_type__c</fullName>
    <label>Pickup type (Delete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>