force-app/main/default/objects/Service__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Income</fullName>
            </value>
            <value>
                <fullName>Mental Disability</fullName>
            </value>
            <value>
                <fullName>Child Services</fullName>
            </value>
            <value>
                <fullName>Fire/Flood</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Physical Disability</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>