force-app/main/default/objects/Service__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <label>Processing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>