force-app/main/default/objects/Service__c/fields/ProcessingFeeBalanceDue__c.field-meta.xml
<CustomField>
    <fullName>ProcessingFeeBalanceDue__c</fullName>
    <formula>(TotalTaxableAmount__c + Processing_Fee__c) - TotalPaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Fee Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>