force-app/main/default/objects/Service__c/fields/Production_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Production_Opportunity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Production Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>