force-app/main/default/objects/Service__c/fields/ProductionCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ProductionCreatedDate__c</fullName>
    <label>Production Created Date</label>
    <type>DateTime</type>
</CustomField>