force-app/main/default/objects/Service__c/fields/RequestAmount__c.field-meta.xml
<CustomField>
    <fullName>RequestAmount__c</fullName>
    <label>Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>