force-app/main/default/objects/Service__c/fields/ReviewDateEmpty__c.field-meta.xml
<CustomField>
    <fullName>ReviewDateEmpty__c</fullName>
    <formula>ISBLANK(ClientServicesReviewed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Date Empty</label>
    <type>Checkbox</type>
</CustomField>