force-app/main/default/objects/Service__c/fields/Scheduling_Contact__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Contact__c</fullName>
    <label>Scheduling Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Caseworker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>