force-app/main/default/objects/Service__c/fields/ServedBy__c.field-meta.xml
<CustomField>
    <fullName>ServedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Served by</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Volunteer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>RequestServedBy</relationshipName>
    <type>Lookup</type>
</CustomField>