force-app/main/default/objects/Service__c/fields/ServiceCityLocation__c.field-meta.xml
<CustomField>
    <fullName>ServiceCityLocation__c</fullName>
    <formula>Location__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service City Location</label>
    <type>Text</type>
</CustomField>