force-app/main/default/objects/Service__c/fields/ServiceRenderedDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceRenderedDate__c</fullName>
    <label>Service Rendered Date</label>
    <type>DateTime</type>
</CustomField>