force-app/main/default/objects/Service__c/fields/ShoppingAppointmentComplete__c.field-meta.xml
<CustomField>
    <fullName>ShoppingAppointmentComplete__c</fullName>
    <label>Shopping Appointment Complete</label>
    <type>DateTime</type>
</CustomField>