force-app/main/default/objects/Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
                <default>true</default>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Expiring</fullName>
                <isActive>false</isActive>
                <label>Expiring</label>
            </value>
            <value>
                <fullName>Items Owed</fullName>
                <isActive>false</isActive>
                <label>Items Owed</label>
            </value>
            <value>
                <fullName>No Call / No Show</fullName>
                <isActive>false</isActive>
                <label>No Call / No Show</label>
            </value>
            <value>
                <fullName>Re-Delivery</fullName>
                <isActive>false</isActive>
                <label>Re-Delivery</label>
            </value>
            <value>
                <fullName>Served</fullName>
                <isActive>false</isActive>
                <label>Served</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>