force-app/main/default/objects/Service__c/fields/Tag_Color__c.field-meta.xml
<CustomField>
    <fullName>Tag_Color__c</fullName>
    <label>Tag Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>