force-app/main/default/objects/Service__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>