force-app/main/default/objects/Service__c/fields/Total_Amount_Delete__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Delete__c</fullName>
    <description>DEPRECIATED?</description>
    <label>Total Amount Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>