force-app/main/default/objects/Service__c/fields/Total_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Value__c</fullName>
    <label>Total Estimated Value</label>
    <summarizedField>ServiceItem__c.Total_Estimated_Value__c</summarizedField>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>