force-app/main/default/objects/Service__c/fields/Total_Household_Members_Including_Client__c.field-meta.xml
<CustomField>
    <fullName>Total_Household_Members_Including_Client__c</fullName>
    <label>Total Household Members Including Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>