force-app/main/default/objects/Service__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summarizedField>ServiceItem__c.Quantity__c</summarizedField>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>