force-app/main/default/objects/Service__c/fields/TotalItemsFees__c.field-meta.xml
<CustomField>
    <fullName>TotalItemsFees__c</fullName>
    <label>Total Item Fees</label>
    <summarizedField>ServiceItem__c.Total_Fee__c</summarizedField>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>