force-app/main/default/objects/Service__c/fields/TotalPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalPaid__c</fullName>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>