force-app/main/default/objects/Service__c/fields/TotalRequested__c.field-meta.xml
<CustomField>
    <fullName>TotalRequested__c</fullName>
    <label>Total Requested</label>
    <summarizedField>ServiceItem__c.Quantity_Requested__c</summarizedField>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>