force-app/main/default/objects/Service__c/fields/TripDate__c.field-meta.xml
<CustomField>
    <fullName>TripDate__c</fullName>
    <formula>Trip__r.Date__c</formula>
    <label>Trip Date</label>
    <type>Date</type>
</CustomField>