force-app/main/default/objects/Service__c/fields/TripStatus__c.field-meta.xml
<CustomField>
    <fullName>TripStatus__c</fullName>
    <formula>Text(Trip__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Status</label>
    <type>Text</type>
</CustomField>