force-app/main/default/objects/Service__c/fields/TripTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>TripTimeFrame__c</fullName>
    <formula>TEXT(Trip__r.PrimaryTimeframe__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Time Frame</label>
    <type>Text</type>
</CustomField>