force-app/main/default/objects/Service__c/fields/TruckNotes__c.field-meta.xml
<CustomField>
    <fullName>TruckNotes__c</fullName>
    <label>Truck Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>