force-app/main/default/objects/Service__c/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <formula>Contact__r.Veteran__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran</label>
    <type>Checkbox</type>
</CustomField>