force-app/main/default/objects/Service__c/fields/Web_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_ID__c</fullName>
    <externalId>true</externalId>
    <label>Web Portal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>