force-app/main/default/objects/Service__c/fields/Web_Portal_Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Trip_Date__c</fullName>
    <label>Web Portal Trip Date</label>
    <type>Date</type>
</CustomField>