force-app/main/default/objects/Service__c/fields/Web_Scheduling_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Scheduling_ID__c</fullName>
    <externalId>true</externalId>
    <label>Web Scheduling ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>