force-app/main/default/objects/Service__c/fields/WebPortalServiceNotes__c.field-meta.xml
<CustomField>
    <fullName>WebPortalServiceNotes__c</fullName>
    <description>Imported from Web Portal Today&apos;s Clients Notes</description>
    <label>Web Portal Service Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>