force-app/main/default/objects/Service__c/fields/Who_is_paying__c.field-meta.xml
<CustomField>
    <fullName>Who_is_paying__c</fullName>
    <label>Who is paying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client and Agency</fullName>
            </value>
            <value>
                <fullName>NWFB Scholarship</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>We have a problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>