force-app/main/default/objects/Service__c/fields/WhoIsPayingProcessingFee__c.field-meta.xml
<CustomField>
    <fullName>WhoIsPayingProcessingFee__c</fullName>
    <label>Who Is Paying Processing Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>