force-app/main/default/objects/Service__c/fields/WP_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>WP_Entry_ID__c</fullName>
    <label>WP Entry ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>