force-app/main/default/objects/Service__c/fields/WriteOffAmount__c.field-meta.xml
<CustomField>
    <fullName>WriteOffAmount__c</fullName>
    <description>Amount that was written off</description>
    <label>Write Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>