force-app/main/default/objects/Service__c/fields/WriteOffDate__c.field-meta.xml
<CustomField>
    <fullName>WriteOffDate__c</fullName>
    <description>Date this service was written off</description>
    <label>Write Off Date</label>
    <type>Date</type>
</CustomField>