force-app/main/default/objects/Service__c/fields/WriteOffReason__c.field-meta.xml
<CustomField>
    <fullName>WriteOffReason__c</fullName>
    <description>Reason for writing off this service balance</description>
    <label>Write Off Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>