force-app/main/default/objects/Service__c/recordTypes/ClientRequest.recordType-meta.xml
<RecordType>
    <fullName>ClientRequest</fullName>
    <active>true</active>
    <label>Client Request</label>
</RecordType>