force-app/main/default/objects/Service__c/recordTypes/DonationPickup.recordType-meta.xml
<RecordType>
    <fullName>DonationPickup</fullName>
    <active>true</active>
    <label>Donation Pickup</label>
</RecordType>