force-app/main/default/objects/Service__c/recordTypes/GeneralDelivery.recordType-meta.xml
<RecordType>
    <fullName>GeneralDelivery</fullName>
    <active>true</active>
    <label>General Delivery</label>
</RecordType>