force-app/main/default/objects/Service__c/recordTypes/GeneralPickup.recordType-meta.xml
<RecordType>
    <fullName>GeneralPickup</fullName>
    <active>true</active>
    <label>General Pickup</label>
</RecordType>