force-app/main/default/objects/Service__c/validationRules/CannotCancelWithoutCancelledReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCancelWithoutCancelledReason</fullName>
    <active>true</active>
    <description>Cannot cancel a service without fill the cancelled reason field</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;  ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISPICKVAL(CancelledReason__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>You must fill the &quot;Cancelled Reason&quot; field before you cancel the service!</errorMessage>
</ValidationRule>