force-app/main/default/objects/Service__c/validationRules/ClientRequestTotalAmountExceeds.validationRule-meta.xml
<ValidationRule>
    <fullName>ClientRequestTotalAmountExceeds</fullName>
    <active>false</active>
    <errorConditionFormula>IF( RecordType.DeveloperName = &apos;ClientRequest&apos;, 
    TotalAmount__c &gt; TotalPaid__c , 
    false
)</errorConditionFormula>
    <errorMessage>Total Amount exceeds Payee Total</errorMessage>
</ValidationRule>