force-app/main/default/objects/Service__c/validationRules/status_routing_will_call.validationRule-meta.xml
<ValidationRule>
    <fullName>status_routing_will_call</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) = &apos;Routing&apos;  &amp;&amp; TEXT(SubType__c) = &apos;Will Call&apos;</errorConditionFormula>
    <errorMessage>Status can not be set to routing for subtype will call</errorMessage>
</ValidationRule>