force-app/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Web_Portal_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>ContactName__c</columns>
    <columns>SubType__c</columns>
    <columns>Date__c</columns>
    <columns>Area__c</columns>
    <columns>Location__c</columns>
    <columns>Caseworker__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastAppointmentDate__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Last_Contact__c</columns>
    <columns>ContactAttempts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>