force-app/main/default/objects/Service__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Caseworker__c</columns>
    <columns>Contact__c</columns>
    <columns>Location__c</columns>
    <columns>RecordTypeName__c</columns>
    <columns>ContactAttempts__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>