force-app/main/default/objects/Service__c/listViews/Client_Requests.listView-meta.xml
<ListView>
    <fullName>Client_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>SubType__c</columns>
    <columns>ContactName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Agency__c</columns>
    <columns>CaseworkerName__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>ShoppingAppointmentComplete__c</columns>
    <columns>LastAppointmentDate__c</columns>
    <columns>ItemsCompleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service__c.ClientRequest</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Client Requests</label>
</ListView>