force-app/main/default/objects/Service__c/listViews/Client_Requests_Matt_s_Cool_Clean_Up.listView-meta.xml
<ListView>
    <fullName>Client_Requests_Matt_s_Cool_Clean_Up</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Location__c</columns>
    <columns>County__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service__c.ClientRequest</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/15/2024 12:00 AM</value>
    </filters>
    <label>Lee&apos;s Cool List (County field)</label>
</ListView>